--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Flower&family=Inter:wght@400;700&display=swap');
+
+/* Agregar sombra al texto del título */
+.sombra {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
+.negrilla{
+    font-weight: bold;
+}
+
+
+h1 {
+    font-family: 'PT Serif', serif;
+}
+  
