Punto2-Total-Plantas

--- a/src/app/plant/plant-list/plant-list.component.html
+++ b/src/app/plant/plant-list/plant-list.component.html
@@ -30,6 +30,15 @@
     </div> 
   </div>
 
+  <!-- Totales -->
+  
+  <div class="col text-left">
+    Total plantas de interior: {{ totalInterior }}
+  </div>
+  <div class="col text-right">
+    Total plantas de exterior: {{ totalExterior }}
+  </div>
+
   <br>
   <br>
   <!-- Información de contacto -->
